# genpcb

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml  model_gemma4_12b.yaml  model_qwen35_9b.yaml
docs/: data-engine.md  generator-model-selection.md  output-format.md  placement-routing-checker.md  results-grpo-surrogate-v1.md  results-grpo-v0.md  review-repair-import.md
models/: surrogate_a.pt
notebooks/: README.md  colab_launcher.ipynb  gen_surrogate_data_colab.ipynb  kicad_setup_colab.ipynb  prepare_data.ipynb  train_grpo_colab.ipynb  train_sft_colab.ipynb
scripts/: audit_grpo.py  overnight_surrogate.py
seeds/: sft_best.jsonl
src/genpcb/: __init__.py  config.py
src/genpcb/data/: __init__.py  best_sft.py  build.py  perturb.py  place_sa.py  procedural.py  serialize.py
src/genpcb/kicad/: __init__.py  dsn.py  footprints.py  read.py  route.py  sexp.py  viz.py  write.py
src/genpcb/models/: __init__.py  adapter.py
src/genpcb/rewards/: __init__.py  metrics.py  surrogate.py
src/genpcb/surrogate/: __init__.py  audit.py  features.py  gen_data.py  model.py  train.py
src/genpcb/train/: grpo.py  sft.py  smoke_tokenizer.py
