[project]
name = "genpcb"
version = "0.1.0"
description = "GRPO-trained LLM for PCB generation with tiered deterministic/surrogate rewards"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6",
    "transformers>=4.45",
]

[project.optional-dependencies]
# 訓練端另裝（unsloth 依 CUDA 版本挑 wheel，不鎖在這裡）
train = ["torch", "trl", "datasets", "wandb"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
